<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/izmeni_nekretninu_naziv"
        android:hint="@string/nov_naziv_nekretnine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorRED"
        android:textColor="@color/colorRED" />

    <EditText
        android:id="@+id/izmeni_nekretninu_opis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nov_opis_nekretnine"
        android:textColorHint="@color/colorRED"
        android:textColor="@color/colorRED"/>

    <EditText
        android:id="@+id/izmeni_nekretninu_adresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nova_adresa_nekretnine"
        android:textColorHint="@color/colorRED"
        android:textColor="@color/colorRED"/>

    <EditText
        android:id="@+id/izmeni_nekretninu_brojTelefona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/nov_broj_telefona_duzi_od_5"
        android:textColorHint="@color/colorRED"
        android:textColor="@color/colorRED"/>

    <EditText
        android:id="@+id/zmeni_nekretninu_kvadratura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nova_kvadratura_nekretnine"
        android:inputType="number|numberDecimal"
        android:textColor="@color/colorRED"
        android:textColorHint="@color/colorRED" />

    <EditText
        android:id="@+id/izmeni_nekretninu_brojSobe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nov_broj_sobe"
        android:inputType="number"
        android:textColor="@color/colorRED"
        android:textColorHint="@color/colorRED" />

    <EditText
        android:id="@+id/izmeni_nekretninu_cena"
        android:layout_width="match_parent"
        android:inputType="number|numberDecimal"
        android:layout_height="wrap_content"
        android:hint="@string/nova_cena_nekretnine"
        android:textColor="@color/colorRED"
        android:textColorHint="@color/colorRED" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/izmeni_nekretninu_preview"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <Button
            android:id="@+id/izmeni_nekretninu_button_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/izmeni_nekretninu_preview"
            android:text="@string/otvori_galeriju_za_sliku"
            android:textColor="@color/colorRED" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/izmeni_nekretninu_button_confirm"
            android:text="@string/potvrdi"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/izmeni_nekrenitnu_button_cancel"
            android:text="@string/odustani"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>